UIEXT-2923: Use dynamic parameters for filter values in Row Filter
Replaced the non-extendable DynamicValuesInput approach for dynamic parameters by using DynamicParameters. 

UIEXT-2923: Use dynamic parameters for filter values